--- a/schools_supervisors.html
+++ b/schools_supervisors.html
@@ -60,52 +60,67 @@
                                 <div class="menu-wrapper d-flex align-items-center justify-content-end">
                                     <!-- Main-menu -->
                                     <div class="main-menu d-none d-lg-block">
-                                         <nav>
+                                          <nav>
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">HOME</a>
                                                     <ul class="submenu">
-                                                        <li><a href="index.html">MAANDEEQ HOME</a></li>
-                                                        <li><a href="arabic_home.html">ARABIC DEPARTMENT</a></li>
-                                                        <li><a href="english_home.html">ENGLISH DEPARTMENT</a></li>
+                                                        <li><a href="index.html">HOME PLATFORM</a></li>
+                                                        <li><a href="arabic_home.html">ARABIC PLATFORM</a></li>
+                                                        <li><a href="english_home.html">ENGLISH PLATFORM</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="exams.html">EXAMINATIONS</a>
+                                              
+                                                <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="exams.html">MAANDEEQ EXAMINATIONS</a></li>
+                                                        <li><a href="services.html">SERVICES APPLICATIONS</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC APPLICATIONS</a></li>
+                                                        <li><a href="english_services.html">ENGLISH APPLICATIONS</a></li>
+                                                        <li><a href="exams.html">SERVICES EXAMINATIONS</a></li>
                                                         <li><a href="arabic_exams.html">ARABIC EXAMINATIONS</a></li>
                                                         <li><a href="english_exams.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="services.html">SERVICES</a>
+                                                  <li><a href="products.html">PRODUCTS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="services.html">MAANDEEQ SUBCRIPTIONS</a></li>
-                                                        <li><a href="arabic_services.html">ARABIC SUBCRIPTIONS</a></li>
-                                                        <li><a href="english_services.html">ENGLISH SUBCRIPTIONS</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="products.html">PRODUCTS</a>
-                                                    <ul class="submenu">
-                                                        <li><a href="products.html">MAANDEEQ PRODUCTS</a></li>
+                                                        <li><a href="products.html">PRODUCTS APPLICATIONS</a></li>
                                                         <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
                                                         <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
+                                                         <li><a href="products.html">PRODUCTS EXAMINATIONS</a></li>
+                                                        <li><a href="arabic_products.html">ARABIC EXAMINATIONS</a></li>
+                                                        <li><a href="english_products.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
+
+                                                <li><a href="institutions.html">INSTITUTIONS</a>
+                                                    <ul class="submenu">
+                                                        <li><a href="schools.html">REGISTERED SCHOOLS</a></li>
+                                                        <li><a href="activated_schools.html">ACTIVATED SCHOOLS</a></li>
+                                                        <li><a href="suspended_schools.html">SUSPENDED SCHOOLS</a></li>
+                                                        <li><a href="institutes.html">REGISTERED INSTITUTES</a></li>
+                                                        <li><a href="activated_institutes.html">ACTIVATED INSTITUTES</a></li>
+                                                        <li><a href="suspended_institutes.html">SUSPENDED INSTITUTES</a></li>
+                                                        <li><a href="universites.html">REGISTERED UNIVERSITIES</a></li>
+                                                        <li><a href="activated_universites.html">ACTIVATED UNIVERSITIES</a></li>
+                                                        <li><a href="suspended_universites.html">SUSPENDED UNIVERSITIES</a></li>
+                                                    </ul>
+                                                </li>
+   
                                                 <li><a href="archives.html">DOWNLOADS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="archives.html">MAANDEEQ DOWNLOADS</a></li>
+                                                        <li><a href="archives.html">ARCHIVES DOWNLOADS</a></li>
                                                         <li><a href="arabic_archives.html">ARABIC DOWNLOADS</a></li> 
                                                         <li><a href="english_archives.html">ENGLISH DOWNLOADS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="contactus.html">CONTACTS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="contactus.html">MAANDEEQ CONTACTS</a></li>
-                                                        <li><a href="arabic_systems.html">ARABIC INSTITUTIONS</a></li>
-                                                        <li><a href="english_systems.html">ENGLISH INSTITUTIONS</a></li>
+                                                        <li><a href="contactus.html">CONTACTS CUSTOMERS</a></li>
+                                                        <li><a href="arabic_systems.html">ARABIC CUSTOMERS</a></li>
+                                                        <li><a href="english_systems.html">ENGLISH CUSTOMERS</a></li>
                                                     </ul>
                                                 </li>
                                                 <!-- Button -->
-                                                <li class="button-header"><a href="lognIn.html" class="btn btn3">LOGIN</a></li>
+                                                <li class="button-header"><a href="login.html" class="btn btn3">LOGIN</a></li>
                                             </ul>
                                         </nav>
                                     </div>
