--- a/index.html
+++ b/index.html
@@ -4405,7 +4405,8 @@
                            <div class="single-footer-caption mb-50">
                                <div class="footer-tittle">
                                    <h4>SCHOOLS</h4>
-                                   <ul> 
+                                   <ul>
+                                       <li><a href="schools.plans.html">PLANS</a></li> 
                                        <li><a href="schools.contracts.html">CONTRACTS</a></li>
                                        <li><a href="schools.platforms.html">PLATFORMS</a></li>
                                        <li><a href="schools.examinations.html">EXAMINATIONS</a></li>
@@ -4425,6 +4426,7 @@
                                <div class="footer-tittle">
                                    <h4>INSTITUTES</h4>
                                    <ul> 
+                                       <li><a href="institutes.plans.html">PLANS</a></li> 
                                        <li><a href="institutes.contracts.html">CONTRACTS</a></li>
                                        <li><a href="institutes.platforms.html">PLATFORMS</a></li>
                                        <li><a href="institutes.examinations.html">EXAMINATIONS</a></li>
@@ -4444,6 +4446,7 @@
                                <div class="footer-tittle">
                                    <h4>UNIVERSITIES</h4>
                                    <ul> 
+                                       <li><a href="universities.plans.html">PLANS</a></li> 
                                        <li><a href="universities.contracts.html">CONTRACTS</a></li>
                                        <li><a href="universities.platforms.html">PLATFORMS</a></li>
                                        <li><a href="universities.examinations.html">EXAMINATIONS</a></li>
