--- a/universities.plans.html
+++ b/universities.plans.html
@@ -342,7 +342,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>UNIVERSITIES</h2>
-                            <h2>CONTRACTS</h2>
+                            <h2>PLANS</h2>
                         </div>
                     </div>
                 </div>
