--- a/schools.plans.html
+++ b/schools.plans.html
@@ -353,12 +353,12 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                                <th>INSTITUTION</th>
-                                <th>REGION</th>
-                                <th>CITY</th>
-                                <th>DISTRICT</th>
-                                <th>TYPE</th>
-                                <th>STATUS</th>
+                                <th>SCHOOLS</th>
+                                <th>PLATFORM</th>
+                                <th>APPLICATIONS SERVICES</th>
+                                <th>EXAMINATIONS SERVICES</th>
+                                <th>APPLICATIONS PRODUCTS</th>
+                                <th>EXAMINATIONS PRODUCTS</th>
                             </tr>
                         </thead>
                         <tbody>
