--- a/schools.plans.html
+++ b/schools.plans.html
@@ -353,7 +353,7 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                                <th>INSTITUTION</th>
+                                <th>SCHOOLS</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
