--- a/universities.plans.html
+++ b/universities.plans.html
@@ -354,11 +354,11 @@
                         <thead class="table-dark">
                             <tr>
                                 <th>UNIVERSITIES</th>
-                                <th>REGION</th>
-                                <th>CITY</th>
-                                <th>DISTRICT</th>
-                                <th>TYPE</th>
-                                <th>STATUS</th>
+                                <th>DIAMOND</th>
+                                <th>GOLDEN</th>
+                                <th>SILVER</th>
+                                <th>IRON</th>
+                                <th>WOODEN</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -821,12 +821,12 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>INSTITUTION</th>
-                                <th>REGION</th>
-                                <th>CITY</th>
-                                <th>DISTRICT</th>
-                                <th>TYPE</th>
-                                <th>STATUS</th>
+                                <th>UNIVERSITIES</th>
+                                <th>DIAMOND</th>
+                                <th>GOLDEN</th>
+                                <th>SILVER</th>
+                                <th>IRON</th>
+                                <th>WOODEN</th>
                             </tr>
                         </tfoot>
                     </table>
