--- a/institutes.plans.html
+++ b/institutes.plans.html
@@ -354,11 +354,11 @@
                         <thead class="table-dark">
                             <tr>
                                 <th>INSTITUTES</th>
-                                <th>DIAMOND</th>
-                                <th>GOLDEN</th>
-                                <th>SILVER</th>
-                                <th>IRON</th>
-                                <th>WOODEN</th>
+                                <th>DIAMOND PLAN</th>
+                                <th>GOLDEN PLAN</th>
+                                <th>SILVER PLAN</th>
+                                <th>IRON PLAN</th>
+                                <th>WOODEN PLAN</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -821,12 +821,12 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>INSTITUTES</th>
-                                <th>DIAMOND</th>
-                                <th>GOLDEN</th>
-                                <th>SILVER</th>
-                                <th>IRON</th>
-                                <th>WOODEN</th>
+                               <th>INSTITUTES</th>
+                                <th>DIAMOND PLAN</th>
+                                <th>GOLDEN PLAN</th>
+                                <th>SILVER PLAN</th>
+                                <th>IRON PLAN</th>
+                                <th>WOODEN PLAN</th>
                             </tr>
                         </tfoot>
                     </table>
