--- a/schools.plans.html
+++ b/schools.plans.html
@@ -353,7 +353,7 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                                <th>SCHOOLS</th>
+                                <th>SCHOOLS PLANS</th>
                                 <th>DIAMOND PLAN</th>
                                 <th>GOLDEN PLAN</th>
                                 <th>SILVER PLAN</th>
@@ -821,7 +821,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>SCHOOLS</th>
+                                <th>SCHOOLS PLANS</th>
                                 <th>DIAMOND PLAN</th>
                                 <th>GOLDEN PLAN</th>
                                 <th>SILVER PLAN</th>
