--- a/institutes.plans.html
+++ b/institutes.plans.html
@@ -147,7 +147,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED PLANNING EDUCATIONAL <br> MANAGEMENT INFORMATION INSTITUTES</h1>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION INSTITUTES</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
                                        
                                     </P>
@@ -354,11 +354,11 @@
                         <thead class="table-dark">
                             <tr>
                                 <th>INSTITUTES</th>
-                                <th>DIAMOND PLAN</th>
-                                <th>GOLDEN PLAN</th>
-                                <th>SILVER PLAN</th>
-                                <th>IRON PLAN</th>
-                                <th>WOODEN PLAN</th>
+                                <th>DIAMOND </th>
+                                <th>GOLDEN </th>
+                                <th>SILVER </th>
+                                <th>IRON </th>
+                                <th>WOODEN </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -822,11 +822,11 @@
                         <tfoot>
                             <tr>
                                <th>INSTITUTES</th>
-                                <th>DIAMOND PLAN</th>
-                                <th>GOLDEN PLAN</th>
-                                <th>SILVER PLAN</th>
-                                <th>IRON PLAN</th>
-                                <th>WOODEN PLAN</th>
+                               <th>DIAMOND </th>
+                                <th>GOLDEN </th>
+                                <th>SILVER </th>
+                                <th>IRON </th>
+                                <th>WOODEN </th>
                             </tr>
                         </tfoot>
                     </table>
