--- a/schools.plans.html
+++ b/schools.plans.html
@@ -147,7 +147,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED PLANNING EDUCATIONAL <br> MANAGEMENT INFORMATION SCHOOLS</h1>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION SCHOOLS</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
                                        
                                     </P>
@@ -353,12 +353,12 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                                <th>SCHOOLS PLANS</th>
-                                <th>DIAMOND PLAN</th>
-                                <th>GOLDEN PLAN</th>
-                                <th>SILVER PLAN</th>
-                                <th>IRON PLAN</th>
-                                <th>WOODEN PLAN</th>
+                                <th>SCHOOLS</th>
+                              <th>DIAMOND </th>
+                                <th>GOLDEN </th>
+                                <th>SILVER </th>
+                                <th>IRON </th>
+                                <th>WOODEN </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -821,12 +821,12 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>SCHOOLS PLANS</th>
-                                <th>DIAMOND PLAN</th>
-                                <th>GOLDEN PLAN</th>
-                                <th>SILVER PLAN</th>
-                                <th>IRON PLAN</th>
-                                <th>WOODEN PLAN</th>
+                                <th>SCHOOLS</th>
+                                <th>DIAMOND </th>
+                                <th>GOLDEN </th>
+                                <th>SILVER </th>
+                                <th>IRON </th>
+                                <th>WOODEN </th>
                             </tr>
                         </tfoot>
                     </table>
