--- a/schools.plans.html
+++ b/schools.plans.html
@@ -354,7 +354,7 @@
                         <thead class="table-dark">
                             <tr>
                                 <th>NO</th>
-                                <th>DIAMOND </th>
+                                <th>TYPE </th>
                                 <th>GOLDEN </th>
                                 <th>SILVER </th>
                                 <th>IRON </th>
@@ -455,7 +455,7 @@
                         <tfoot>
                             <tr>
                                 <th>NO</th>
-                                <th>DIAMOND </th>
+                                <th>TYPE </th>
                                 <th>GOLDEN </th>
                                 <th>SILVER </th>
                                 <th>IRON </th>
