--- a/schools.plans.html
+++ b/schools.plans.html
@@ -355,7 +355,7 @@
                             <tr>
                                 <th>NO</th>
                                 <th>TYPE </th>
-                                <th>GOLDEN </th>
+                                <th>APPLICATION </th>
                                 <th>SILVER </th>
                                 <th>IRON </th>
                                 <th>WOODEN </th>
@@ -456,7 +456,7 @@
                             <tr>
                                 <th>NO</th>
                                 <th>TYPE </th>
-                                <th>GOLDEN </th>
+                                <th>APPLICATION </th>
                                 <th>SILVER </th>
                                 <th>IRON </th>
                                 <th>WOODEN </th>
