--- a/schools.plans.html
+++ b/schools.plans.html
@@ -357,7 +357,7 @@
                                 <th>TYPE </th>
                                 <th>APPLICATION </th>
                                 <th>SILVER </th>
-                                <th>IRON </th>
+                                <th>LANGUAGE </th>
                                 <th>WOODEN </th>
                             </tr>
                         </thead>
@@ -458,7 +458,7 @@
                                 <th>TYPE </th>
                                 <th>APPLICATION </th>
                                 <th>SILVER </th>
-                                <th>IRON </th>
+                                <th>LANGUAGE </th>
                                 <th>WOODEN </th>
                             </tr>
                         </tfoot>
