--- a/schools.plans.html
+++ b/schools.plans.html
@@ -358,7 +358,7 @@
                                 <th>APPLICATION </th>
                                 <th>SILVER </th>
                                 <th>LANGUAGE </th>
-                                <th>SERVICES </th>
+                                <th>SERVICE </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -459,7 +459,7 @@
                                 <th>APPLICATION </th>
                                 <th>SILVER </th>
                                 <th>LANGUAGE </th>
-                                <th>SERVICES </th>
+                                <th>SERVICE </th>
                             </tr>
                         </tfoot>
                     </table>
