--- a/schools.plans.html
+++ b/schools.plans.html
@@ -356,7 +356,7 @@
                                 <th>NO</th>
                                 <th>TYPE </th>
                                 <th>APPLICATION </th>
-                                <th>SILVER </th>
+                                <th>PLATFORM </th>
                                 <th>LANGUAGE </th>
                                 <th>SERVICE </th>
                             </tr>
@@ -457,7 +457,7 @@
                                 <th>NO</th>
                                 <th>TYPE </th>
                                 <th>APPLICATION </th>
-                                <th>SILVER </th>
+                                <th>PLATFORM </th>
                                 <th>LANGUAGE </th>
                                 <th>SERVICE </th>
                             </tr>
