--- a/schools.plans.html
+++ b/schools.plans.html
@@ -359,6 +359,10 @@
                                 <th>SYSTEM </th>
                                 <th>LANGUAGE </th>
                                 <th>SERVICE </th>
+                                <th>INSTITUTION </th>
+                                <th>PLATFORM </th>
+                                <th>PRICE </th>
+                                <th>PAYMENT </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -373,6 +377,10 @@
                                 <th>SYSTEM </th>
                                 <th>LANGUAGE </th>
                                 <th>SERVICE </th>
+                                <th>INSTITUTION </th>
+                                <th>PLATFORM </th>
+                                <th>PRICE </th>
+                                <th>PAYMENT </th>
                             </tr>
                         </tfoot>
                     </table>
