--- a/schools.plans.html
+++ b/schools.plans.html
@@ -594,7 +594,7 @@
  <td>ARABIC</td>
  <td>MONTHLY</td>
  <td>SCHOOL</td>
- <td>09</td>
+ <td>KGPRIPRESP</td>
  <td>$25</td>
  <td>MONTHLY</td>
  </tr>                            
