--- a/schools.plans.html
+++ b/schools.plans.html
@@ -624,7 +624,7 @@
  </tr>                            
  <tr>
  <td>11</td>
- <td>09</td>
+ <td>SERVICE</td>
  <td>EXAMINATION APP</td>
  <td>EMIS</td>
  <td>ARABIC</td>
