--- a/code.html
+++ b/code.html
@@ -770,6 +770,410 @@
  <td>MONTHLY</td>
  </tr>          
 
+ <tr>
+ <td>01</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>KGSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGSP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>02</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>PRISS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRISP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>03</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>PRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRESP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>04</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>SECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>SECSP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>05</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>KGPRISS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRISP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>06</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>PRIPRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRIPRESP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>07</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>PRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRESECSP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>08</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>KGPRIPRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRIPRESP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>09</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>PRIPRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRIPRESECSP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>10</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>KGPRIPRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRIPRESECSP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>11</td>
+ <td>SERVICE</td>
+ <td>PLATFORM APP</td>
+ <td>EMIS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>EMIP</td>
+ <td>$50</td>
+ <td>MONTHLY</td>
+ </tr>
+ 
+ 
+  <tr>
+ <td>01</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>KGSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>02</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>PRISS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRISP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+
+ </tr>                            
+ <tr>
+ <td>03</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>PRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRESP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>04</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>SECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>SECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>05</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>KGPRISS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRISP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>06</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>PRIPRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRIPRESP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>07</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>PRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRESECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>08</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>KGPRIPRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRIPRESP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>09</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>PRIPRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRIPRESECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>10</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>KGPRIPRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRIPRESECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>11</td>
+ <td>SERVICE</td>
+ <td>EXAMINATION APP</td>
+ <td>EMIS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>EMIP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>      
+ 
+ 
+ <tr>
+ <td>01</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>KGSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>02</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>PRISS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRISP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+
+ </tr>                            
+ <tr>
+ <td>03</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>PRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRESP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>04</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>SECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>SECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>05</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>KGPRISS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRISP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>06</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>PRIPRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRIPRESP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>07</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>PRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRESECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>08</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>KGPRIPRESS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRIPRESP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>09</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>PRIPRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>PRIPRESECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>10</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>KGPRIPRESECSS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>KGPRIPRESECSP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>                            
+ <tr>
+ <td>11</td>
+ <td>SERVICE</td>
+ <td>DATA APP</td>
+ <td>EMIS</td>
+ <td>ENGLISH</td>
+ <td>MONTHLY</td>
+ <td>SCHOOL</td>
+ <td>EMIP</td>
+ <td>$25</td>
+ <td>MONTHLY</td>
+ </tr>          
+
+
 
 
                         </tbody>
