--- a/code.html
+++ b/code.html
@@ -370,7 +370,7 @@
                              <tr>
  <td>01</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -382,7 +382,7 @@
  <tr>
  <td>02</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRISS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -394,7 +394,7 @@
  <tr>
  <td>03</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -406,7 +406,7 @@
  <tr>
  <td>04</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>SECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -418,7 +418,7 @@
  <tr>
  <td>05</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGPRISS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -430,7 +430,7 @@
  <tr>
  <td>06</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRIPRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -442,7 +442,7 @@
  <tr>
  <td>07</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -454,7 +454,7 @@
  <tr>
  <td>08</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGPRIPRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -466,7 +466,7 @@
  <tr>
  <td>09</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRIPRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -478,7 +478,7 @@
  <tr>
  <td>10</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGPRIPRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -490,7 +490,7 @@
  <tr>
  <td>11</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>EMIS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -504,7 +504,7 @@
   <tr>
  <td>01</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -516,7 +516,7 @@
  <tr>
  <td>02</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRISS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -529,7 +529,7 @@
  <tr>
  <td>03</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -541,7 +541,7 @@
  <tr>
  <td>04</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>SECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -553,7 +553,7 @@
  <tr>
  <td>05</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGPRISS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -565,7 +565,7 @@
  <tr>
  <td>06</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRIPRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -577,7 +577,7 @@
  <tr>
  <td>07</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -589,7 +589,7 @@
  <tr>
  <td>08</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGPRIPRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -601,7 +601,7 @@
  <tr>
  <td>09</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRIPRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -613,7 +613,7 @@
  <tr>
  <td>10</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGPRIPRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -625,7 +625,7 @@
  <tr>
  <td>11</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>EMIS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -639,7 +639,7 @@
  <tr>
  <td>01</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -651,7 +651,7 @@
  <tr>
  <td>02</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRISS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -664,7 +664,7 @@
  <tr>
  <td>03</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -676,7 +676,7 @@
  <tr>
  <td>04</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>SECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -688,7 +688,7 @@
  <tr>
  <td>05</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGPRISS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -700,7 +700,7 @@
  <tr>
  <td>06</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRIPRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -712,7 +712,7 @@
  <tr>
  <td>07</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -724,7 +724,7 @@
  <tr>
  <td>08</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGPRIPRESS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -736,7 +736,7 @@
  <tr>
  <td>09</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRIPRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -748,7 +748,7 @@
  <tr>
  <td>10</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGPRIPRESECSS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -760,7 +760,7 @@
  <tr>
  <td>11</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>EMIS</td>
  <td>ARABIC</td>
  <td>MONTHLY</td>
@@ -773,7 +773,7 @@
  <tr>
  <td>01</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -785,7 +785,7 @@
  <tr>
  <td>02</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRISS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -797,7 +797,7 @@
  <tr>
  <td>03</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -809,7 +809,7 @@
  <tr>
  <td>04</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>SECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -821,7 +821,7 @@
  <tr>
  <td>05</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGPRISS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -833,7 +833,7 @@
  <tr>
  <td>06</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRIPRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -845,7 +845,7 @@
  <tr>
  <td>07</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -857,7 +857,7 @@
  <tr>
  <td>08</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGPRIPRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -869,7 +869,7 @@
  <tr>
  <td>09</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>PRIPRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -881,7 +881,7 @@
  <tr>
  <td>10</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>KGPRIPRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -893,7 +893,7 @@
  <tr>
  <td>11</td>
  <td>SERVICE</td>
- <td>PLATFORM APP</td>
+ <td>PLATFORM </td>
  <td>EMIS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -907,7 +907,7 @@
   <tr>
  <td>01</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -919,7 +919,7 @@
  <tr>
  <td>02</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRISS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -932,7 +932,7 @@
  <tr>
  <td>03</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -944,7 +944,7 @@
  <tr>
  <td>04</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>SECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -956,7 +956,7 @@
  <tr>
  <td>05</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGPRISS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -968,7 +968,7 @@
  <tr>
  <td>06</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRIPRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -980,7 +980,7 @@
  <tr>
  <td>07</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -992,7 +992,7 @@
  <tr>
  <td>08</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGPRIPRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1004,7 +1004,7 @@
  <tr>
  <td>09</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>PRIPRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1016,7 +1016,7 @@
  <tr>
  <td>10</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>KGPRIPRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1028,7 +1028,7 @@
  <tr>
  <td>11</td>
  <td>SERVICE</td>
- <td>EXAMINATION APP</td>
+ <td>EXAMINATION </td>
  <td>EMIS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1042,7 +1042,7 @@
  <tr>
  <td>01</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1054,7 +1054,7 @@
  <tr>
  <td>02</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRISS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1067,7 +1067,7 @@
  <tr>
  <td>03</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1079,7 +1079,7 @@
  <tr>
  <td>04</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>SECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1091,7 +1091,7 @@
  <tr>
  <td>05</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGPRISS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1103,7 +1103,7 @@
  <tr>
  <td>06</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRIPRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1115,7 +1115,7 @@
  <tr>
  <td>07</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1127,7 +1127,7 @@
  <tr>
  <td>08</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGPRIPRESS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1139,7 +1139,7 @@
  <tr>
  <td>09</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>PRIPRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1151,7 +1151,7 @@
  <tr>
  <td>10</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>KGPRIPRESECSS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
@@ -1163,7 +1163,7 @@
  <tr>
  <td>11</td>
  <td>SERVICE</td>
- <td>DATA APP</td>
+ <td>DATA </td>
  <td>EMIS</td>
  <td>ENGLISH</td>
  <td>MONTHLY</td>
