--- a/code.html
+++ b/code.html
@@ -350,7 +350,7 @@
 
             <div class="container">
                 <div style="overflow-x:auto;">
-                    <table id="example" class="display table-dark " style="width:150%">
+                    <table id="example" class="display table-warning " style="width:150%">
                         <thead class="table-dark">
                             <tr>
                                 <th>NO</th>
